<resources>
    <string name="app_name">HPI Fitness Walk</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="office">Office</string>
    <string name="settings">Settings</string>
    <string name="walk">Walk</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="start_walk">Start Walking</string>
    <string name="home">Home</string>
    <string name="milestone">Milestone</string>
</resources>
